--- a/app/src/main/res/layout/select_barcode.xml
+++ b/app/src/main/res/layout/select_barcode.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8" />
+        app:layout_constraintGuide_percent="0.75" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline26"
@@ -46,7 +46,6 @@
         android:id="@+id/scannedBarcodesDescText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/barcode1"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline24"
@@ -82,4 +81,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/homeButton"
+        android:layout_width="@dimen/circleButtonWidth"
+        android:layout_height="@dimen/circleButtonHeight"
+        android:background="@drawable/green_circle_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline27"
+        app:layout_constraintStart_toStartOf="@+id/guideline26"
+        app:layout_constraintTop_toTopOf="@+id/guideline25"
+        app:srcCompat="@drawable/ic_baseline_home_24"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
