--- a/app/src/main/res/layout/received_item_row.xml
+++ b/app/src/main/res/layout/received_item_row.xml
@@ -36,10 +36,21 @@
         android:visibility="gone" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/receivedItemSetExpButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/lightblue_medium_corner_button"
+        android:text="@string/date1"
+        android:textSize="15sp"
+        android:visibility="gone"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/receivedItemChooseButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/lightblue_medium_corner_button"
+        android:background="@drawable/green_medium_corner_button"
         android:text="@string/choose"
         android:textSize="15sp"
         android:visibility="gone"/>
