--- a/app/src/main/res/layout/activity_collections.xml
+++ b/app/src/main/res/layout/activity_collections.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline31" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button"
+        android:id="@+id/createCollectionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/orange_medium_corner_button"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline32" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button2"
+        android:id="@+id/localItemsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/orange_medium_corner_button"
