--- a/app/src/main/res/layout/collection_row.xml
+++ b/app/src/main/res/layout/collection_row.xml
@@ -17,6 +17,5 @@
         android:id="@+id/collectionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="testo lunghissimo, ancora lunghissimo"
-        android:textColor="@color/black"/>
+        android:textColor="@color/white"/>
 </LinearLayout>
